[package]
name = "ezio"
version = "0.1.0"
authors = ["sakuraya <bluepixel1214@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.11"
env_logger = "0.7.1"
failure = "0.1.8"
pnet = "0.26.0"
rayon = "1.3.1"
mio = "0.6.11"
regex = "1.3.9"
byteorder = "1"
rusqlite = "0.23.1"
ipnetwork = "0.17.0"
rand = "0.7.3"
rand_distr = "0.2.2"
clap = "2.33.2"
ansi_term = "0.12.1"
