[package]
name = "ezio"
version = "0.1.0"
authors = ["sakuraya <bluepixel1214@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.11"
env_logger = "0.7.1"
failure = "0.1.8"
pnet = "0.26.0"
rayon = "1.3.1"
mio = "0.6.11"
regex = "1.3.9"
byteorder = "1"
rusqlite = "0.23.1"
ipnetwork = "0.17.0"
rand = "0.7.3"
rand_distr = "0.2.2"
clap = "2.33.2"
ansi_term = "0.12.1"
flate2 = "1.0.16"
tar = "0.4.29"
crossbeam = "0.7.3"
crossbeam-channel = "0.4.3"
lazy_static = "1.4.0"
threadpool = "1.8.1"
num_cpus = "1.13.0"
walkdir = "2.3.1"
ring = "0.16.15"
num = "0.3.0"
image = "0.23.8"
error-chain = "0.12.4"
glob = "0.3.0"
data-encoding = "2.3.0"
bitflags = "1.2.1"
postgres = "0.17.5"
chrono = "0.4.13"
